Add layout switcher and codemirror mode switcher for HTML and JavaScript

--- a/make-college/index.html
+++ b/make-college/index.html
@@ -5,7 +5,12 @@
     <title>make-college</title>
     <script type="text/javascript" src="./static/codemirror/lib/codemirror.js"></script>
     <link rel="stylesheet prefetch" href="./static/codemirror/lib/codemirror.css">
+    <script src="./static/codemirror/addon/selection/selection-pointer.js"></script>
+    <script src="./static/codemirror/mode/xml/xml.js"></script>
+    <script src="./static/codemirror/mode/css/css.js"></script>
+    <script src="./static/codemirror/mode/vbscript/vbscript.js"></script>
     <script type="text/javascript" src="./static/codemirror/mode/javascript/javascript.js"></script>
+    <script type="text/javascript" src="./static/codemirror/mode/htmlmixed/htmlmixed.js"></script>
   </head>
   <body>
     <app></app>
